--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h2>Welcome to Header Parser</h2>
-		<a href="" target="_blank"></a>
+		<a href="https://mighty-forest-93463.herokuapp.com/api/header" target="_blank">Get Header Details</a>
 	</body>
 </html>
